@startuml

title __MOTEURJEU's Class Diagram__\n

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.Commande {
          + bas : boolean
          + droite : boolean
          + gauche : boolean
          + haut : boolean
          + tir : boolean
          + Commande()
          + Commande()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.Controleur {
          + Controleur()
          + getCommande()
          + keyPressed()
          + keyReleased()
          + keyTyped()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      interface fr.unilim.iut.moteurjeu.DessinJeu {
          {abstract} + dessiner()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.InterfaceGraphique {
          + InterfaceGraphique()
          + dessiner()
          + getControleur()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      interface fr.unilim.iut.moteurjeu.Jeu {
          {abstract} + etreFini()
          {abstract} + evoluer()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.MoteurGraphique {
          + MoteurGraphique()
          + lancerJeu()
      }
    }
  }
  

  namespace fr.unilim.iut {
    namespace moteurjeu {
      class fr.unilim.iut.moteurjeu.PanelDessin {
          - height : int
          - imageEnCours : BufferedImage
          - imageSuivante : BufferedImage
          - width : int
          + PanelDessin()
          + dessinerJeu()
          + paint()
      }
    }
  }
  

  fr.unilim.iut.moteurjeu.Controleur .up.|> java.awt.event.KeyListener
  fr.unilim.iut.moteurjeu.Controleur o-- fr.unilim.iut.moteurjeu.Commande : commandeARetourner
  fr.unilim.iut.moteurjeu.Controleur o-- fr.unilim.iut.moteurjeu.Commande : commandeEnCours
  fr.unilim.iut.moteurjeu.InterfaceGraphique o-- fr.unilim.iut.moteurjeu.Controleur : controleur
  fr.unilim.iut.moteurjeu.InterfaceGraphique o-- fr.unilim.iut.moteurjeu.PanelDessin : panel
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.DessinJeu : dessin
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.InterfaceGraphique : gui
  fr.unilim.iut.moteurjeu.MoteurGraphique o-- fr.unilim.iut.moteurjeu.Jeu : jeu
  fr.unilim.iut.moteurjeu.PanelDessin -up-|> javax.swing.JPanel
  fr.unilim.iut.moteurjeu.PanelDessin o-- fr.unilim.iut.moteurjeu.DessinJeu : dessin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
